--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,13 @@
+- name: Features
+  link: /
+- name: Quick Start Guide
+  link: /#quick-start-guide
 - name: The Benefactor Circle add-on
   link: /benefactorcircle
-- name: "More information"
+- name: "Help"
   dropdown:
+  - name: Quick Start Guide
+    link: /#quick-start-guide
   - name: Technical details, requirements and usage
     link: /details
   - name: Parameters
@@ -10,11 +16,10 @@
     link: /outlookaddin
   - name: Frequently asked questions (FAQ)
     link: /faq
+  - name: Support
+    link: /support
+- name: "Interactive demo"
+  link: /benefactorcircle/#demo
 - name: Download
   link: /download
-- name: Support
-  link: /support
-- name: "Contact"
-  link: /contact
-- name: "Legal"
-  link: /legal/
+
