docs: update navigation and footer menu for consistency and clarity

--- a/_data/footer_menu.yml
+++ b/_data/footer_menu.yml
@@ -1,14 +1,14 @@
 # ▼▼▼ Copy content of navigation.yml below ▼▼▼
 - name: Features
   link: /
-- name: Quick Start Guide
+- name: Quick Start
   link: /#quick-start-guide
-- name: The Benefactor Circle add-on
+- name: Benefactor Circle add-on
   link: /benefactorcircle
+- name: "Demo"
+  link: /benefactorcircle/#demo
 - name: "Help"
   dropdown:
-  - name: Quick Start Guide
-    link: /#quick-start-guide
   - name: Technical details, requirements and usage
     link: /details
   - name: Parameters
@@ -19,8 +19,6 @@
     link: /faq
   - name: Support
     link: /support
-- name: "Interactive demo"
-  link: /benefactorcircle/#demo
 - name: Download
   link: /download
 # ▲▲▲ Copy content of navigation.yml above ▲▲▲
