Refactor documentation structure and add Quick Start Guide
- Updated the table of contents in outlookaddin.md for better navigation and clarity.
- Enhanced section headings in outlookaddin.md to include numbering for improved organization.
- Added a new quickstart.md file to provide a concise guide for deploying signatures quickly.
- Reformatted parameter documentation in parameters.md to include numbered sections for easier reference.
- Improved descriptions and examples in parameters.md for clarity and usability.

--- a/_data/footer_menu.yml
+++ b/_data/footer_menu.yml
@@ -2,7 +2,7 @@
 - name: Features
   link: /
 - name: Quick Start
-  link: /#quick-start-guide
+  link: /quickstart
 - name: Benefactor Circle add-on
   link: /benefactorcircle
 - name: "Demo"
