--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - name: Features
   link: /
 - name: Quick Start
-  link: /#quick-start-guide
+  link: /quickstart
 - name: Benefactor Circle add-on
   link: /benefactorcircle
 - name: "Demo"
