--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,8 @@
   link: /
 - name: Quick Start
   link: /quickstart
-- name: Benefactor Circle add-on
+- name: |
+    The <span style="color: #d4af37; font-weight: bold;">Benefactor Circle</span> add-on
   link: /benefactorcircle
 - name: "Demo"
   link: /benefactorcircle/#demo
