docs: update Benefactor Circle add-on styling for consistency

--- a/_data/footer_menu.yml
+++ b/_data/footer_menu.yml
@@ -4,7 +4,7 @@
 - name: Quick Start
   link: /quickstart
 - name: |
-    The <span style="color: #d4af37; font-weight: bold;">Benefactor Circle</span> add-on
+    <span style="color: #d4af37; font-style: italic;">Benefactor Circle</span> add-on
   link: /benefactorcircle
 - name: "Demo"
   link: /benefactorcircle/#demo
@@ -22,6 +22,7 @@
     link: /support
 - name: Download
   link: /download
+
 
 # ▲▲▲ Copy content of navigation.yml above ▲▲▲
 
