docs: standardize Benefactor Circle add-on description in navigation and footer menus

--- a/_data/footer_menu.yml
+++ b/_data/footer_menu.yml
@@ -4,7 +4,7 @@
 - name: Quick Start
   link: /quickstart
 - name: |
-    <p style="color: #d4af37; display: inline;">Benefactor Circle</p><p style="display: inline;"> add-on</p>
+    The <i>Benefactor Circle</i> add-on
   link: /benefactorcircle
 - name: "Demo"
   link: /benefactorcircle/#demo
