docs: update navigation menu item for consistent naming of Benefactor Circle add-on

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   link: /
 - name: Quick Start
   link: /quickstart
-- name: The Benefactor Circle add-on
+- name: Benefactor Circle add-on
   link: /benefactorcircle
 - name: "Demo"
   link: /benefactorcircle/#demo
