--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,7 @@
 - name: "Demo"
   link: /benefactorcircle/#demo
 - name: "Help"
+  link: /help
   dropdown:
   - name: Technical details, requirements and usage
     link: /details
