fix: correct name formatting for Benefactor Circle add-on in navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Quick Start
   link: /quickstart
-- name: Benefactor Circle add-on
+- name: The Benefactor Circle add-on
   link: /benefactorcircle
 - name: "Demo"
   link: /benefactorcircle/#demo
