fix: update navigation and add features page with detailed descriptions and comparisons

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,9 +4,11 @@
   link: /benefactorcircle
 - name: "Demo"
   link: /benefactorcircle/#demo
-- name: "Help"
+- name: "Help and support"
   link: /help
   dropdown:
+  - name: Features and feature comparison
+    link: /features
   - name: Technical details, requirements and usage
     link: /details
   - name: Parameters
