Add implementation approach documentation for Set-OutlookSignatures software
- Introduced a comprehensive guide detailing the implementation approach for the Set-OutlookSignatures software.
- Included sections on manual and automatic maintenance of signatures, criteria for product evaluation, and synchronization across devices.
- Provided recommendations for using Set-OutlookSignatures, including features, administration, and support from the service provider.
- Documented the entire lifecycle from initial consultation to ongoing operations, ensuring clarity for product managers, architects, and administrators.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,6 +17,8 @@
     link: /outlookaddin
   - name: Frequently asked questions (FAQ)
     link: /faq
+  - name: Implementation approach
+    link: /implementationappraoch
   - name: Support
     link: /support
 - name: Download
