fix: correct typo in link for Implementation approach in navigation.yml

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@
   - name: Frequently asked questions (FAQ)
     link: /faq
   - name: Implementation approach
-    link: /implementationappraoch
+    link: /implementationapproach
   - name: Support
     link: /support
 - name: Download
