--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ baidu_site_verification  :
 # Plugins (previously gems:)
 plugins:
   - jekyll-paginate
+  - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
@@ -40,6 +41,7 @@ plugins:
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
+  - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
