refactor workflow jobs for clarity and improved execution order

--- a/.github/workflows/search-engines-urls-push.yml
+++ b/.github/workflows/search-engines-urls-push.yml
@@ -7,13 +7,18 @@ on:
     - cron: "15 */3 * * *"
 
 jobs:
-  check-and-submit:
+  setup-delay:
     runs-on: ubuntu-latest
     steps:
       - name: Sleep # allow GitHub pages to deploy the site, so the correct sitemap can be used
         uses: GuillaumeFalourd/wait-sleep-action@v1
         with:
           time: "120s"
+
+  submit-to-search-engines:
+    runs-on: ubuntu-latest
+    needs: setup-delay # This job will run after setup-delay completes
+    steps:
       - name: 3Alan/search-engines-urls-push@v0.2.3
         uses: 3Alan/search-engines-urls-push@v0.2.3
         with:
@@ -22,6 +27,11 @@ jobs:
           bing-token: ${{ secrets.BING_TOKEN }}
           google-client-email: ${{ secrets.GOOGLE_CLIENT_EMAIL }}
           google-private-key: ${{ secrets.GOOGLE_PRIVATE_KEY }}
+
+  submit-to-indexnow:
+    runs-on: ubuntu-latest
+    needs: setup-delay # This job will run in parallel with 'submit-to-search-engines' because they both depend only on 'setup-delay'
+    steps:
       - name: indexnow-action
         uses: bojieyang/indexnow-action@v2
         with:
