--- a/.github/workflows/search-engines-urls-push.yml
+++ b/.github/workflows/search-engines-urls-push.yml
@@ -40,5 +40,5 @@ jobs:
           sitemap-location: ${{ secrets.SITEMAP }}
           key: ${{ secrets.INDEXNOW_KEY }}
           lastmod-required: false
-          since: 1
-          since-unit: minute
+          since: 999
+          since-unit: year
