--- a/_data/footer_menu.yml
+++ b/_data/footer_menu.yml
@@ -1,5 +1,7 @@
 # Individual footer menu items
 - name: "Contact"
   link: /contact
+- name: "Team"
+  link: https://explicitconsulting.at/team
 - name: "Legal information"
   link: /legal/
