--- a/_data/footer_menu.yml
+++ b/_data/footer_menu.yml
@@ -1,7 +1,7 @@
 # Individual footer menu items
 - name: "Contact"
   link: /contact
-- name: "Team"
+- name: "Our team"
   link: https://explicitconsulting.at/team
 - name: "Legal information"
   link: /legal/
