--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,5 +22,7 @@
     link: /implementationapproach
   - name: Support
     link: /support
+#  - name: "Our team"
+#    link: https://explicitconsulting.at/team
 - name: Download
   link: /download
