--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ locale: "en"
 lang: en
 languages: ["en", "de"]
 default_lang: "en"
-exclude_from_localization: ["javascript", "images", "css", "public", "sitemap"]
+exclude_from_localization: ["javascript", "images", "css", "public", "sitemap", "sitemap.xml"]
 lang_from_path: true
 parallel_localization: false
 direction: ltr # left to right
