--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ locale: "en"
 lang: en
 languages: ["en", "de"]
 default_lang: "en"
-exclude_from_localization: ["assets", "javascript", "images", "css", "public", "sitemap.xml", "sitemap-test.xml", "customer-images.txt", "Gemfile", "robots.txt", "search.json"]
+exclude_from_localization: ["assets", "javascript", "images", "css", "public", "sitemap.xml", "customer-images.txt", "Gemfile", "robots.txt", "search.json"]
 parallel_localization: false
 direction: ltr # left to right
 google_analytics: # UA-xxxxxxx
