chore: update navbar casing

--- a/_data/footer_menu.yml
+++ b/_data/footer_menu.yml
@@ -1,5 +1,5 @@
 # Individual footer menu items
 - name: "Contact"
   link: /contact
-- name: "Legal information"
+- name: "Legal Information"
   link: /legal/
