--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,22 +3,22 @@
 - name: |
     <span style="font-weight: bold; background-image: linear-gradient(to right, darkgoldenrod, goldenrod, darkgoldenrod, goldenrod, darkgoldenrod); background-clip: text; color: transparent;">Benefactor Circle add-on</span>
   link: /benefactorcircle
-- name: "Demo"
+- name: Demo
   link: /benefactorcircle#demo
-- name: "Help and support"
+- name: Help and Support
   link: /help
   dropdown:
-  - name: Features and feature comparison
+  - name: Features and Feature Comparison
     link: /features
-  - name: Technical details, requirements and usage
+  - name: Technical Details, Requirements, Usage
     link: /details
   - name: Parameters
     link: /parameters
-  - name: The Outlook add-in
+  - name: The Outlook Add-In
     link: /outlookaddin
-  - name: Frequently asked questions (FAQ)
+  - name: Frequently Asked Questions (FAQ)
     link: /faq
-  - name: Implementation approach
+  - name: Implementation Approach
     link: /implementationapproach
   - name: Support
     link: /support
