--- a/_data/en/strings.yml
+++ b/_data/en/strings.yml
@@ -3,3 +3,262 @@ search_search-input_placeholder_loading: "Loading data…"
 search_search-input_placeholder_ready: "Type to search"
 search_resultsContainer_placeholder_queryEmpty: "Please enter a valid search term."
 search_resultsContainer_placeholder_queryNoResults: "No results found."
+search_layout: |
+  <div class="field has-addons">
+      <div class="control is-expanded">
+          <input type="search" id="search-input" placeholder="{{ site.data[site.active_lang].strings.search_search-input_placeholder_ready }}" class="input is-large">
+      </div>
+  </div>
+
+  <div id="search-results" class="content">
+  </div>
+
+
+  <script>
+      (function() {
+          const flexsearchBaseUrl = "https://cdn.jsdelivr.net/gh/nextapps-de/flexsearch@0.8/dist/flexsearch.bundle.min.js";
+          const languagePackBaseUrl = "https://cdn.jsdelivr.net/gh/nextapps-de/flexsearch@0.8/dist/lang/";
+
+          const allSearchFields = ["document", "section", "content", "url", "date", "category", "tags"];
+
+          const searchInput = document.getElementById('search-input');
+          const searchResultsContainer = document.getElementById('search-results');
+
+          // Set initial placeholder and disable the input
+          searchInput.placeholder = "{{ site.data[site.active_lang].strings.search_search-input_placeholder_loading }}";
+          searchInput.disabled = true;
+
+          const indexes = {};
+
+          // Get the languages string from the custom meta tag
+          const languagesMeta = document.querySelector('meta[name="site-languages"]');
+          const languages = {};
+
+          if (languagesMeta) {
+              const languageCodes = languagesMeta.content.toLowerCase().split(',');
+              languageCodes.forEach(code => {
+                  const trimmedCode = code.trim();
+                  // Check for the English language code
+                  if (trimmedCode === 'en') {
+                      languages[trimmedCode] = '/search.json';
+                  } else {
+                      languages[trimmedCode] = `/${trimmedCode}/search.json`;
+                  }
+              });
+          }
+
+          const currentLang = document.documentElement.lang || Object.keys(languages)[0] || 'en';
+
+          function createIndex(lang, languagePack) {
+              return new FlexSearch.Document({
+                  document: {
+                      id: "url",
+                      index: allSearchFields,
+                      store: allSearchFields
+                  },
+                  tokenize: "full",
+                  encoder: languagePack || FlexSearch.Charset.LatinSoundex,
+                  cache: true,
+                  context: true,
+                  lang: lang
+              });
+          }
+
+          // Debounce function specifically for the _paq tracking
+          function debounce(func, delay) {
+              let timeoutId;
+              return function(...args) {
+                  clearTimeout(timeoutId);
+                  timeoutId = setTimeout(() => {
+                      func.apply(this, args);
+                  }, delay);
+              };
+          }
+
+          const debouncedTrackSearch = debounce(function() {
+              if (typeof _paq !== 'undefined') {
+                  const query = searchInput.value.trim();
+                  const resultsCount = searchResultsContainer.querySelectorAll('li').length;
+                  _paq.push(['trackSiteSearch', query, false, resultsCount]);
+              }
+          }, 2000); // 2000ms delay for _paq
+
+          async function loadScript(url) {
+              return new Promise((resolve, reject) => {
+                  const script = document.createElement('script');
+                  script.src = url;
+                  script.onload = () => resolve();
+                  script.onerror = () => reject(new Error(`Failed to load script: ${url}`));
+                  document.head.appendChild(script);
+              });
+          }
+
+          async function initializeSearch() {
+              try {
+                  // 1. Load the main FlexSearch library.
+                  await loadScript(flexsearchBaseUrl);
+
+                  // 2. Loop through language codes to load language packs and search.json.
+                  for (const lang of Object.keys(languages)) {
+                      try {
+                          let languagePack = null;
+
+                          // Await the script load before accessing FlexSearch.lang.
+                          await loadScript(`${languagePackBaseUrl}${lang}.min.js`);
+                          languagePack = FlexSearch.Language[lang] || FlexSearch.Charset.LatinSoundex;
+
+                          const response = await fetch(languages[lang]);
+                          if (!response.ok) {
+                              throw new Error(`HTTP error! status: ${response.status}`);
+                          }
+                          const data = await response.json();
+
+                          const index = createIndex(lang, languagePack);
+                          data.forEach(item => {
+                              if (item.url) {
+                                  index.add(item);
+                              } else {
+                                  console.warn(`Item missing URL in ${languages[lang]}, skipping for FlexSearch index:`, item);
+                              }
+                          });
+                          indexes[lang] = index;
+                      } catch (error) {
+                          console.error(`Error loading data for language "${lang}":`, error);
+                          delete languages[lang];
+                      }
+                  }
+
+                  if (Object.keys(indexes).length > 0) {
+                      searchInput.placeholder = "{{ site.data[site.active_lang].strings.search_search-input_placeholder_ready }}";
+                      searchInput.disabled = false;
+                      searchInput.addEventListener('input', () => {
+                          const query = searchInput.value.trim();
+
+                          if (query.length > 0) {
+                              performSearch();
+                          } else {
+                              searchResultsContainer.innerHTML = '';
+                          }
+
+                          debouncedTrackSearch();
+                      });
+                  } else {
+                      searchInput.placeholder = "{{ site.data[site.active_lang].strings.search_search-input_placeholder_error }}";
+                      searchInput.disabled = true;
+                      searchResultsContainer.innerHTML = '<p>Error loading search data. Please check your network connection and reload the page.</p>';
+                  }
+              } catch (error) {
+                  console.error('Initialization failed:', error);
+                  searchInput.placeholder = "{{ site.data[site.active_lang].strings.search_search-input_placeholder_error }}";
+                  searchInput.disabled = true;
+                  searchResultsContainer.innerHTML = '<p>Search functionality failed to load. Please try again later.</p>';
+              }
+          }
+
+          initializeSearch();
+
+          function performSearch() {
+              const query = searchInput.value.trim();
+              if (query.length === 0) {
+                  searchResultsContainer.innerHTML = '';
+                  return;
+              }
+              if (typeof query !== 'string' || query.length === 0) {
+                  searchResultsContainer.innerHTML = '<p>{{ site.data[site.active_lang].strings.search_resultsContainer_placeholder_queryEmpty }}</p>';
+                  return;
+              }
+
+              let allResults = [];
+              const searchOptions = {
+                  limit: 99,
+                  suggest: true,
+                  highlight: {
+                      template: '<mark style="background-color: yellow;">$1</mark>',
+                      boundary: {
+                          before: 50,
+                          after: 50,
+                          total: 500
+                      },
+                      merge: true,
+                  }
+              };
+
+              const currentLangIndex = indexes[currentLang];
+              if (currentLangIndex) {
+                  const rawResults = currentLangIndex.search(query, searchOptions);
+                  rawResults.forEach(fieldResult => {
+                      if (fieldResult && fieldResult.result) {
+                          fieldResult.result.forEach(r => {
+                              const originalDoc = currentLangIndex.get(r.id);
+                              if (originalDoc) {
+                                  const highlightedDoc = { ...originalDoc, highlight: r.highlight, field: fieldResult.field };
+                                  allResults.push({ id: r.id, doc: highlightedDoc, score: r.score - 1000, lang: currentLang });
+                              }
+                          });
+                      }
+                  });
+              }
+
+              Object.keys(indexes).forEach(lang => {
+                  if (lang !== currentLang) {
+                      const otherLangIndex = indexes[lang];
+                      const rawResults = otherLangIndex.search(query, searchOptions);
+
+                      rawResults.forEach(fieldResult => {
+                          if (fieldResult && fieldResult.result) {
+                              fieldResult.result.forEach(r => {
+                                  const originalDoc = otherLangIndex.get(r.id);
+                                  if (originalDoc) {
+                                      const highlightedDoc = { ...originalDoc, highlight: r.highlight, field: fieldResult.field };
+                                      allResults.push({ id: r.id, doc: highlightedDoc, score: r.score, lang: lang });
+                                  }
+                              });
+                          }
+                      });
+                  }
+              });
+
+              allResults.sort((a, b) => a.score - b.score);
+              displayResults(allResults);
+          }
+
+          function displayResults(results) {
+              const uniqueResults = [];
+              const seenUrls = new Set();
+              results.forEach(result => {
+                  if (result.doc && !seenUrls.has(result.doc.url)) {
+                      uniqueResults.push(result);
+                      seenUrls.add(result.doc.url);
+                  }
+              });
+
+              if (uniqueResults.length === 0) {
+                  searchResultsContainer.innerHTML = '<p>{{ site.data[site.active_lang].string.search_resultsContainer_placeholder_queryNoResults }}</p>';
+                  return;
+              }
+
+              let html = '<ul class="search-results-list">';
+              uniqueResults.forEach(result => {
+                  const item = result.doc;
+                  if (!item) {
+                      console.warn('Skipping search result with undefined document:', result);
+                      return;
+                  }
+
+                  const title = item.document || 'No Title';
+                  const url = item.url || '#';
+                  const sectionContent = item.section || '';
+                  const mainContent = item.highlight || '';
+
+                  html += `
+                      <li class="box mb-4">
+                          <p><a href="${url}"><strong>${title}</strong></a><br>${sectionContent}</p>
+                          <p>${mainContent}</p>
+                      </li>
+                  `;
+              });
+              html += '</ul>';
+              searchResultsContainer.innerHTML = html;
+          }
+      })();
+  </script>
