--- a/_data/de/strings.yml
+++ b/_data/de/strings.yml
@@ -1,3 +1,6 @@
+page_not_translated: "Leider ist diese Seite noch nicht auf Deutsch übersetzt. Bis dahin wird Ihnen die englische Version angezeigt."
+
+"Leider ist diese Seite noch nicht auf Deutsch übersetzt. Bis dahin wird Ihnen die englische Version angezeigt."
 search_search-input_placeholder_error: "Fehler beim Laden der Daten."
 search_search-input_placeholder_loading: "Lade Daten…"
 search_search-input_placeholder_ready: "Suchbegriff eingeben"
