--- a/_data/en/strings.yml
+++ b/_data/en/strings.yml
@@ -1,3 +1,5 @@
+page_not_translated: "This page has not been translated yet. In the meantime, you'll see the English version."
+
 search_search-input_placeholder_error: "Error loading search data."
 search_search-input_placeholder_loading: "Loading data…"
 search_search-input_placeholder_ready: "Type to search"
