--- a/_data/de/strings.yml
+++ b/_data/de/strings.yml
@@ -1,6 +1,5 @@
-page_not_translated: "Leider ist diese Seite noch nicht auf Deutsch übersetzt. Bis dahin wird Ihnen die englische Version angezeigt."
+page_not_translated: Diese Seite ist noch nicht auf Deutsch verfügbar. Sie sehen bis dahin die englische Version."
 
-"Leider ist diese Seite noch nicht auf Deutsch übersetzt. Bis dahin wird Ihnen die englische Version angezeigt."
 search_search-input_placeholder_error: "Fehler beim Laden der Daten."
 search_search-input_placeholder_loading: "Lade Daten…"
 search_search-input_placeholder_ready: "Suchbegriff eingeben"
