--- a/_data/de/strings.yml
+++ b/_data/de/strings.yml
@@ -1,4 +1,4 @@
-page_not_translated: Diese Seite ist noch nicht auf Deutsch verfügbar. Sie sehen bis dahin die englische Version."
+page_not_translated: "Diese Seite ist noch nicht auf Deutsch verfügbar. Sie sehen bis dahin die englische Version."
 
 search_search-input_placeholder_error: "Fehler beim Laden der Daten."
 search_search-input_placeholder_loading: "Lade Daten…"
