docs(navigation, benefactorcircle): Add pricing

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 - name: Features
   link: /features
+- name: Pricing
+  link: /benefactorcircle#price
 - name: Quick Start Guide
   link: /quickstart
 - name: Download
