docs(navigation): Rename "quick start guide" to "quick start"

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   link: /features
 - name: Pricing
   link: /benefactorcircle#price
-- name: Quick Start Guide
+- name: Quick Start
   link: /quickstart
 - name: Download
   link: /download
