docs(benefactorcircle): Update wording

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Features
   link: /features
-- name: Pricing
+- name: Price
   link: /benefactorcircle#price
 - name: Quick Start
   link: /quickstart
