--- a/_data/de/strings.yml
+++ b/_data/de/strings.yml
@@ -1,4 +1,8 @@
+search: Suche
+
 page_not_translated: "Diese Seite ist noch nicht auf Deutsch verfügbar. Sie sehen bis dahin die englische Version."
+
+footer_no-cookie-hint: "Diese Seite nutzt keine zustimmungspflichtigen Cookies oder Analyse-Tools. Unsere Datenschutzerklärung finden Sie unter den oben genannten Links."
 
 search_search-input_placeholder_error: "Fehler beim Laden der Daten."
 search_search-input_placeholder_loading: "Lade Daten…"
