--- a/_data/en/strings.yml
+++ b/_data/en/strings.yml
@@ -1,4 +1,8 @@
+search: Search
+
 page_not_translated: "This page has not been translated yet. In the meantime, you'll see the English version."
+
+footer_no-cookie-hint: "This site does not use cookies or analytic tools requiring you to consent or define allowed services. For our privacy notice, see the links above."
 
 search_search-input_placeholder_error: "Error loading search data."
 search_search-input_placeholder_loading: "Loading data…"
