--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ collections:
     output: true
 
 paginate: 5
-paginate_path: "/blog/page:num/"
+#paginate_path: "/blog/page:num/"
 
 plugins:
   - jekyll-polyglot
