--- a/_config.yml
+++ b/_config.yml
@@ -78,11 +78,11 @@ pagination:
   # How many objects per paginated page, used to be `paginate` (default: 0, means all)
   per_page: 5
   # The permalink structure for the paginated pages (this can be any level deep)
-  permalink: '/blog/:num/' # Pages are index.html inside this folder (default)
+  permalink: '/:num/' # Pages are index.html inside this folder (default)
   #permalink: '/page/:num.html' # Pages are simple html files 
   #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
   # Optional the title format for the paginated pages (supports :title for original page title, :num for pagination page number, :max for total number of pages)
-  title: ':title - page :num'
+  # title: ':title - page :num'
   # Limit how many pagenated pages to create (default: 0, means all)
   limit: 0
   # Optional, defines the field that the posts should be sorted on (omit to default to 'date')
