docs(blog): typos

--- a/_data/de/strings.yml
+++ b/_data/de/strings.yml
@@ -9,3 +9,5 @@ search_search-input_placeholder_loading: "Lade Daten…"
 search_search-input_placeholder_ready: "Suchbegriff eingeben"
 search_resultsContainer_placeholder_queryEmpty: "Bitte geben Sie einen gültigen Suchbegriff ein."
 search_resultsContainer_placeholder_queryNoResults: "Keine Suchergebnisse gefunden."
+
+post_read_full: "Read full post"
