docs(blog): typos

--- a/_data/en/strings.yml
+++ b/_data/en/strings.yml
@@ -10,4 +10,4 @@ search_search-input_placeholder_ready: "Type to search"
 search_resultsContainer_placeholder_queryEmpty: "Please enter a valid search term."
 search_resultsContainer_placeholder_queryNoResults: "No results found."
 
-post_read_full: "Ganzes Posting lesen"
+post_read_full: "Read full post"
