chore: add Blog to navigation

--- a/_data/de/navigation.yml
+++ b/_data/de/navigation.yml
@@ -11,6 +11,8 @@
   link: /benefactorcircle
 - name: Demo
   link: /benefactorcircle#demo
+- name: Blog
+  link: /blog
 - name: Ressourcen
   link: /help
   dropdown:
