--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -11,6 +11,8 @@
   link: /benefactorcircle
 - name: Demo
   link: /benefactorcircle#demo
+- name: Blog
+  link: /blog
 - name: Resources
   link: /help
   dropdown:
