--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ defaults:
       path: ""
     values:
       layout: page
-      image: "/assets/images/set-outlooksignatures logo.png"
+      image: "/assets/images/set-outlooksignatures benefactor circle opengraph1200x630.png"
       # "/assets/images/background, vietnam golden bridge.jpg"
       hero_height: is-small
       # hero_darken: true
